<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.dialogs.PasswordResetDialog"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_reset_dialog_header"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/dialog_password_reset_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_password_reset_context"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/dialog_password_reset_new_password_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/dialog_password_reset_new_password_one"/>

        <EditText
            android:id="@+id/dialog_password_reset_new_password_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/dialog_password_reset_new_password_two"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/dialog_password_reset_action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_password_reset_action_cancel"
            android:textSize="25sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/dialogButton"/>

        <TextView
            android:id="@+id/dialog_password_reset_action_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_password_reset_action_ok"
            android:textSize="25sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/dialogButton"/>

    </RelativeLayout>

</LinearLayout>