<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/logo_transparent"
        android:layout_marginBottom="25dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/reset_worker_lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_worker_lbl_name"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/reset_worker_spinner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/reset_worker_lbl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_worker_lbl_email"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/reset_worker_tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_worker_tv_email"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/reset_worker_lbl_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_worker_lbl_zone"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/reset_worker_et_zone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_worker_tv_zone_number"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">
        <TextView
            android:id="@+id/reset_worker_lbl_officer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_worker_lbl_officer"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/reset_worker_et_officer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_worker_tv_officer_name"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/reset_worker_btn_unbind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_worker_btn_unbind"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"/>

        <Button
            android:id="@+id/reset_worker_btn_password_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_worker_btn_password_reset"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"/>

    </LinearLayout>


</LinearLayout>