<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.worker.NFC">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/logo_transparent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/nfc_lbl_tag_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nfc_lbl_tag_location"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/nfc_tv_tag_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nfc_tv_tag_location"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:layout_marginEnd="20dp"
                android:paddingLeft="10dp"
                android:layout_marginRight="20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/nfc_tv_tag_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_tv_tag_status"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/nfc_tv_tag_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_tv_tag_message"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>


</RelativeLayout>