<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/logo_transparent"
        android:layout_marginBottom="50dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/login_et_username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/login_et_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_login"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/link_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_register"/>

</LinearLayout>