<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/logo_transparent"
        android:layout_marginBottom="25dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/reminder_worker_lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_worker_lbl_name"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/reminder_worker_spinner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp">

        </Spinner>

    </LinearLayout>

    <EditText
        android:id="@+id/reminder_worker_et_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/reminder_worker_et_reminder"
        android:inputType="textMultiLine"
        android:enabled="true"
        android:minLines="6"
        android:maxLines="6"
        android:isScrollContainer="true"
        android:gravity="left|top"
        android:background="@drawable/edittext_border_background"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/reminder_worker_lbl_urgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_worker_lbl_urgent"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/reminder_worker_spinner_urgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp">

        </Spinner>

    </LinearLayout>


    <Button
        android:id="@+id/reminder_worker_btn_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_worker_btn_reminder"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>