<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/logo_transparent"
        android:layout_marginBottom="25dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/location_worker_lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_worker_lbl_name"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/location_worker_spinner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">
        <TextView
            android:id="@+id/location_worker_lbl_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_worker_lbl_address"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/location_worker_tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_worker_tv_address"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"/>


    </LinearLayout>

    <!-- Google Location API -->
    <com.google.android.gms.maps.MapView
        android:id="@+id/google_map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</LinearLayout>